update add_favorite
